--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,13 @@
     <div id="navbar-bkg">
       <div id="navbar">
         <a class="home-title item-navbar" href="index.html">Justin Zhu</a>
+        
         <a class="item-navbar" href="projects.html">Projects</a>
         <a class="item-navbar" href="tutorials.html">Tutorials</a>
+        <a class="item-navbar" href="index.html">Home</a>
       </div>
     </div>
+    <p id="header">Hi, I'm Justin, an aspiring software engineer.</p>
+    <p id="about_text">I enjoy making projects, but also competitive programming. Please check out my projects and tutorials!</p>
   </body>
 </html>
