--- a/src/projects.html
+++ b/src/projects.html
@@ -14,6 +14,7 @@
     <div id="navbar-bkg">
       <div id="navbar">
         <a class="home-title item-navbar" href="index.html">Justin Zhu</a>
+        <a class="item-navbar" href="index.html">Home</a>
         <a class="item-navbar" href="projects.html">Projects</a>
         <a class="item-navbar" href="tutorials.html">Tutorials</a>
       </div>
