--- a/src/tutorials.html
+++ b/src/tutorials.html
@@ -16,6 +16,7 @@
         <a class="home-title item-navbar" href="index.html">Justin Zhu</a>
         <a class="item-navbar" href="projects.html">Projects</a>
         <a class="item-navbar" href="tutorials.html">Tutorials</a>
+        <a class="item-navbar" href="index.html">Home</a>
       </div>
     </div>
   </body>
