--- a/src/final.html
+++ b/src/final.html
@@ -14,17 +14,14 @@
     <div id="navbar-bkg">
       <div id="navbar">
         <a class="home-title item-navbar" href="index.html">Justin Zhu</a>
-        
         <a class="item-navbar" href="projects.html">Projects</a>
         <a class="item-navbar" href="tutorials.html">Tutorials</a>
         <a class="item-navbar" href="index.html">Home</a>
       </div>
     </div>
-    <div class="center">
-      <h1>Hi, I'm Justin, an aspiring software engineer.</h1>
-      <p>I'm currently attending William Lyon Mackenzie CI. </p>
-      <p>My hobbies include competitive programming, reading, and playing chess.</p>
-      <p>Please check out my projects and tutorials!</p>
+    <div>
+      <h1>OOP</h1>
+      <p>Blah blah blah</p>
     </div>
   </body>
 </html>
