--- a/src/tutorials.html
+++ b/src/tutorials.html
@@ -19,5 +19,20 @@
         <a class="item-navbar" href="index.html">Home</a>
       </div>
     </div>
+    <div class="projectlist">
+      <h1>Tutorials</h1>
+      <br>
+      <h2><a href="oop.html">OOP</a></h2>
+      <p>Object oriented programming basics in Java</p>
+      <br>
+      <h2><a href="array.html">Arrays/Arraylists</a></h2>
+      <p>Everything about arrays/arraylists in Java</p>
+      <br>
+      <h2><a href="search.html">Search/Sort</a></h2>
+      <p>Linear Search, Binary Search, Bubble Sort, Quick Sort</p>
+      <br>
+      <h2><a href="final.html">Final Project</a></h2>
+      <p>Culminating project for ICS4U course</p>
+    </div>
   </body>
 </html>
