--- a/src/final.html
+++ b/src/final.html
@@ -11,17 +11,24 @@
   </head>
 
   <body>
-    <div id="navbar-bkg">
-      <div id="navbar">
-        <a class="home-title item-navbar" href="index.html">Justin Zhu</a>
-        <a class="item-navbar" href="projects.html">Projects</a>
-        <a class="item-navbar" href="tutorials.html">Tutorials</a>
-        <a class="item-navbar" href="index.html">Home</a>
-      </div>
-    </div>
-    <div>
-      <h1>OOP</h1>
-      <p>Blah blah blah</p>
-    </div>
-  </body>
+        <div id="navbar-bkg">
+            <div id="navbar">
+                <a class="home-title item-navbar" href="index.html">Justin Zhu</a>
+                <a class="item-navbar" href="projects.html">Projects</a>
+                <a class="item-navbar" href="tutorials.html">Tutorials</a>
+                <a class="item-navbar" href="index.html">Home</a>
+            </div>
+        </div>
+
+        <div class="blog">
+            <h1>Final Project</h1>
+            <p>Our final project was made in JavaFX, a popular GUI library for Java. In this tutorial, I won't be covering all the details about FX. Instead, I will talk about how to get started creating a game.</p>
+            <p>Before creating your project, you need to design what the game will look like. In our case, we drew out all the screens beforehand.</p>
+            <img src="img/ISP.jpg" alt="screenshot">
+            <p>After planning all the screens, you should find which GUI suits your game the most. This can be determined by looking at your skillset, and searching online. In our case, we were interested in learning JavaFX.</p>
+            <p>During the programming phase, you will inevitably face troubles, but most should be easily solved with Google. 
+                If you are working with others, you should set up a Github repository, so that all changes can be stored, and everyone can collaborate without hassle. <a href="https://product.hubspot.com/blog/git-and-github-tutorial-for-beginners">Here</a> is a Git tutorial if you are interested in starting.
+            </p>
+        </div>
+    </body>
 </html>
