--- a/src/projects.html
+++ b/src/projects.html
@@ -19,5 +19,27 @@
         <a class="item-navbar" href="index.html">Home</a>
       </div>
     </div>
+    <div class="projectslist">
+      <h1>Projects</h1>
+      <ul>
+        <li>
+          <h2><a href="https://github.com/astrocat879/ICS2U-ISP">Snakes and Ladders Game</a></h2>
+          <p>This game was created in my grade 9 year, using Processing.</p>
+          <img src="img/snakesandladders.png" alt="screenshot" style="width:700px;height:450px;">
+        </li>
+        <br>
+        <li>
+          <h2><a href="https://github.com/astrocat879/ICS3U-ISP">Crossword Game</a></h2>
+          <p>This game was created in my grade 10 year, using hsa console.</p>
+          <img src="img/crossword.png" alt="screenshot" style="width:700px;height:500px;">
+        </li>
+        <br>
+        <li>
+          <h2><a href="https://github.com/astrocat879/ICS4U-ISP">COVID Dilemma</a></h2>
+          <p>This game was created in my grade 10 year, using JavaFX.</p>
+          <img src="img/ISP.jpg" alt="screenshot" style="width:700px;height:450px;">
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
