--- a/src/tutorials.html
+++ b/src/tutorials.html
@@ -19,7 +19,7 @@
         <a class="item-navbar" href="index.html">Home</a>
       </div>
     </div>
-    <div class="projectlist">
+    <div class="tutlist">
       <h1>Tutorials</h1>
       <br>
       <h2><a href="oop.html">OOP</a></h2>
